--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://placehold.co/400x400/3498db/ffffff?text=KU" alt="Kingsley Uzokwe">
+                <img src="https://i.imgur.com/fuweAgI.png" alt="Kingsley Uzokwe">
             </div>
         </div>
     </section>
@@ -1351,7 +1351,7 @@
                     <a href="https://github.com/kingsley388" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/kingsley-uzokwe/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <p>&copy; 2023 Kingsley Uzokwe. All rights reserved.</p>
+                <p>&copy; 2025 Kingsley Uzokwe. All rights reserved.</p>
             </div>
         </div>
     </footer>
